bpy.utils.units.to_string uses wrong units for velocity, acceleration, lens length, and power #97927

Closed
opened 2022-05-07 08:45:16 +02:00 by TDV Alinsa · 4 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.23

Blender Version
Broken: version: 3.1.2, branch: master, commit date: 2022-03-31 17:40, hash: cc66d1020c (also verified on a current 3.2 beta)
Worked: 2.93.x

Short description of error
An extra 'time' entry was added to bUnitSystems (as defined in source/blender/blenkernel/intern/unit.c) in commit 5fa6cdb77a. Because the bpyunits_ucategorie_items array in source/blender/python/intern/bpy_utils_units.c was not updated to match, every category after that entry (which is to say, velocity, acceleration, lens length, and power) has an off-by-one error that makes blender return the wrong units for those categories. Units are correct in the 2.93.x series, and are correct in the 3.0 series, the 3.1 series, and the current 3.2 beta.

Either that, or the 'CAMERA' category in 3.0+ involves firing a camera out of a cannon rather than measuring lens length.

Exact steps for others to reproduce the error

In the blender python console (in Blender 3.1.2):

>>> bpy.utils.units.to_string('METRIC', 'VELOCITY', 50)

'50 sec'

>>> bpy.utils.units.to_string('METRIC', 'ACCELERATION', 50)

'50 m/s'

>>> bpy.utils.units.to_string('METRIC', 'CAMERA', 50)

'50 m/s²'

>>> bpy.utils.units.to_string('METRIC', 'POWER', 50)

'50 mm'

Compare to the correct values (from 2.93.x):

>>> bpy.utils.units.to_string('METRIC', 'VELOCITY', 50)

'50 m/s'

>>> bpy.utils.units.to_string('METRIC', 'ACCELERATION', 50)

'50 m/s²'

>>> bpy.utils.units.to_string('METRIC', 'CAMERA', 50)

'50 mm'

>>> bpy.utils.units.to_string('METRIC', 'POWER', 50)

'50 W'
**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.23 **Blender Version** Broken: version: 3.1.2, branch: master, commit date: 2022-03-31 17:40, hash: `cc66d1020c` (also verified on a current 3.2 beta) Worked: 2.93.x **Short description of error** An extra 'time' entry was added to `bUnitSystems` (as defined in `source/blender/blenkernel/intern/unit.c`) in commit 5fa6cdb77a. Because the `bpyunits_ucategorie_items` array in `source/blender/python/intern/bpy_utils_units.c` was not updated to match, every category after that entry (which is to say, velocity, acceleration, lens length, and power) has an off-by-one error that makes blender return the wrong units for those categories. Units are correct in the 2.93.x series, and are correct in the 3.0 series, the 3.1 series, and the current 3.2 beta. Either that, or the 'CAMERA' category in 3.0+ involves firing a camera out of a cannon rather than measuring lens length. **Exact steps for others to reproduce the error** In the blender python console (in Blender 3.1.2): ``` >>> bpy.utils.units.to_string('METRIC', 'VELOCITY', 50) '50 sec' >>> bpy.utils.units.to_string('METRIC', 'ACCELERATION', 50) '50 m/s' >>> bpy.utils.units.to_string('METRIC', 'CAMERA', 50) '50 m/s²' >>> bpy.utils.units.to_string('METRIC', 'POWER', 50) '50 mm' ``` Compare to the correct values (from 2.93.x): ``` >>> bpy.utils.units.to_string('METRIC', 'VELOCITY', 50) '50 m/s' >>> bpy.utils.units.to_string('METRIC', 'ACCELERATION', 50) '50 m/s²' >>> bpy.utils.units.to_string('METRIC', 'CAMERA', 50) '50 mm' >>> bpy.utils.units.to_string('METRIC', 'POWER', 50) '50 W' ```
Author

Added subscriber: @alinsa-4

Added subscriber: @alinsa-4

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 43e31d26a9

This issue was referenced by 43e31d26a955034882035d2e0ec320dfab8f1375

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2022-05-09 16:35:25 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97927
No description provided.